Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,33 @@
     ]
   },
   {
+    "title": "Uống sữa thế nào giảm bùng phát cơn gout",
+    "content": "Uống sữa không đường hàng ngày có thể giúp giảm nguy cơ bùng phát cơn gout nhờ tăng đào thải axit uric qua nước tiểu. Sữa có hàm lượng purin thấp và chứa vitamin D, hỗ trợ sức khỏe xương. Người bệnh gout nên lựa chọn sữa ít béo hoặc sữa hạt và hạn chế thực phẩm giàu purin để kiểm soát tình trạng bệnh.",
+    "link": "https://vnexpress.net/uong-sua-the-nao-giam-bung-phat-con-gout-4866561.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào uống sữa có thể giúp giảm bùng phát cơn gout?",
+    "answers": [
+      {
+        "text": "Uống sữa không đường giúp tăng đào thải axit uric.",
+        "correct": true
+      },
+      {
+        "text": "Uống sữa nguyên kem làm tăng nồng độ axit uric.",
+        "correct": false
+      },
+      {
+        "text": "Uống sữa có đường giúp cải thiện triệu chứng gout.",
+        "correct": false
+      },
+      {
+        "text": "Uống sữa đặc giúp giảm triệu chứng gout.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người mẫu kém 24 tuổi không thích bị gọi là \"bạn gái của Leonardo DiCaprio\"",
     "content": "Người mẫu Vittoria Ceretti không thích bị gọi là \"bạn gái của Leonardo DiCaprio\", mặc dù họ đã hẹn hò từ tháng 5/2023. Ceretti cho biết việc được gắn liền với tên tuổi của một người nổi tiếng khiến cô cảm thấy không thoải mái. Dù vậy, cô vẫn thừa nhận tình yêu với DiCaprio và khen ngợi anh là người đàn ông tử tế. Mối quan hệ của họ được cho là ngày càng gắn bó, nhưng hiện tại chưa có kế hoạch kết hôn.",
     "link": "https://dantri.com.vn/giai-tri/nguoi-mau-kem-24-tuoi-khong-thich-bi-goi-la-ban-gai-cua-leonardo-dicaprio-20250326132021618.htm",
@@ -3018,6 +3045,33 @@
     ]
   },
   {
+    "title": "Vì sao viêm teo niêm mạc dạ dày?",
+    "content": "Viêm teo niêm mạc dạ dày là tình trạng viêm mạn tính tại niêm mạc dạ dày, thường do nhiễm vi khuẩn H.pylori, trào ngược dịch mật, hoặc do thuốc. Bệnh cũng có thể do yếu tố tự miễn gây ra. Việc điều trị có thể đạt tỷ lệ thành công cao, khoảng 80-95% nếu phát hiện sớm và điều trị đúng cách. Mặc dù viêm teo dạ dày có thể dẫn đến ung thư, hầu hết bệnh nhân có thể được điều trị hiệu quả nếu tuân thủ hướng dẫn của bác sĩ.",
+    "link": "https://vnexpress.net/vi-sao-viem-teo-niem-mac-da-day-4866442.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Vì sao mẹ tôi bị viêm teo niêm mạc dạ dày?",
+    "answers": [
+      {
+        "text": "Do nhiễm vi khuẩn H.pylori",
+        "correct": true
+      },
+      {
+        "text": "Do ăn uống không hợp vệ sinh",
+        "correct": false
+      },
+      {
+        "text": "Do lạm dụng thuốc giảm đau",
+        "correct": false
+      },
+      {
+        "text": "Do di truyền từ gia đình",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lê Hồng Lâm: 'TV như cầu nối cảm xúc với điện ảnh'",
     "content": "Lê Hồng Lâm, nhà phê bình điện ảnh, cho rằng TV hiện đại, đặc biệt là mẫu Sony Bravia 8 với công nghệ màn hình Oled và bộ xử lý nhận thức, có khả năng truyền tải trọn vẹn cảm xúc và ý đồ của các tác phẩm điện ảnh. Anh chia sẻ về niềm đam mê điện ảnh từ nhỏ, và cách mà công nghệ hiện đại giúp xóa nhòa ranh giới giữa xem phim tại rạp và tại nhà. Qua trải nghiệm với bộ phim 'Once upon a time in Hollywood', Lê Hồng Lâm cảm nhận được sự sống động và chân thực mà công nghệ mang lại, từ hình ảnh đến âm thanh, tạo nên những khoảnh khắc điện ảnh đáng nhớ.",
     "link": "https://vnexpress.net/le-hong-lam-tv-nhu-cau-noi-cam-xuc-voi-dien-anh-4864243.html",
@@ -3067,33 +3121,6 @@
       },
       {
         "text": "Không hiệu quả đối với mọi loại da",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao viêm teo niêm mạc dạ dày?",
-    "content": "Viêm teo niêm mạc dạ dày là tình trạng viêm mạn tính tại niêm mạc dạ dày, thường do nhiễm vi khuẩn H.pylori, trào ngược dịch mật, hoặc do thuốc. Bệnh cũng có thể do yếu tố tự miễn gây ra. Việc điều trị có thể đạt tỷ lệ thành công cao, khoảng 80-95% nếu phát hiện sớm và điều trị đúng cách. Mặc dù viêm teo dạ dày có thể dẫn đến ung thư, hầu hết bệnh nhân có thể được điều trị hiệu quả nếu tuân thủ hướng dẫn của bác sĩ.",
-    "link": "https://vnexpress.net/vi-sao-viem-teo-niem-mac-da-day-4866442.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Vì sao mẹ tôi bị viêm teo niêm mạc dạ dày?",
-    "answers": [
-      {
-        "text": "Do nhiễm vi khuẩn H.pylori",
-        "correct": true
-      },
-      {
-        "text": "Do ăn uống không hợp vệ sinh",
-        "correct": false
-      },
-      {
-        "text": "Do lạm dụng thuốc giảm đau",
-        "correct": false
-      },
-      {
-        "text": "Do di truyền từ gia đình",
         "correct": false
       }
     ]
