Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Suối nước nóng Nhật Bản cạn kiệt do quá tải khách du lịch",
+    "content": "Suối nước nóng tại Nhật Bản, đặc biệt là ở thị trấn Ureshino, đang đối mặt với tình trạng cạn kiệt nguồn nước do lượng du khách tăng mạnh. Mực nước trung bình tại Ureshino đã giảm kỷ lục 39,6m vào năm ngoái, giảm 20% so với bốn năm trước. Chính quyền địa phương kêu gọi các cơ sở lưu trú hạn chế sử dụng bồn tắm onsen riêng tư vào ban đêm, nhằm bảo vệ nguồn tài nguyên này trong bối cảnh du lịch đang bùng nổ.",
+    "link": "https://tuoitre.vn/suoi-nuoc-nong-nhat-ban-can-kiet-do-qua-tai-khach-du-lich-20250327134224904.htm",
+    "cat": "du-lich",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao suối nước nóng ở Nhật Bản đang cạn kiệt?",
+    "answers": [
+      {
+        "text": "Do quá tải khách du lịch",
+        "correct": true
+      },
+      {
+        "text": "Do thời tiết lạnh hơn",
+        "correct": false
+      },
+      {
+        "text": "Do chính phủ tăng thuế du lịch",
+        "correct": false
+      },
+      {
+        "text": "Do cơ sở hạ tầng hiện đại",
+        "correct": false
+      },
+      {
+        "text": "Do nước suối đã cạn kiệt tự nhiên",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bún thang lươn kiểu cổ",
     "content": "Bún thang lươn kiểu cổ là món ăn truyền thống với sự kết hợp giữa nhiều nguyên liệu như thịt lươn, trứng gà, giò lụa và ruốc sỏi. Nước dùng được chế biến từ xương lươn và xương lợn, mang hương vị ngọt thanh và thơm lừng. Món ăn này nổi bật với hình thức đẹp mắt và hương vị phong phú, thường được yêu thích ở Hưng Yên. Bài viết cũng chia sẻ cách chế biến và các mẹo để có được món bún thang lươn hoàn hảo.",
     "link": "https://vnexpress.net/bun-thang-luon-kieu-co-4866685.html",
@@ -560,33 +591,6 @@
     ]
   },
   {
-    "title": "Người mẫu kém 24 tuổi không thích bị gọi là \"bạn gái của Leonardo DiCaprio\"",
-    "content": "Người mẫu Vittoria Ceretti không thích bị gọi là \"bạn gái của Leonardo DiCaprio\", mặc dù họ đã hẹn hò từ tháng 5/2023. Ceretti cho biết việc được gắn liền với tên tuổi của một người nổi tiếng khiến cô cảm thấy không thoải mái. Dù vậy, cô vẫn thừa nhận tình yêu với DiCaprio và khen ngợi anh là người đàn ông tử tế. Mối quan hệ của họ được cho là ngày càng gắn bó, nhưng hiện tại chưa có kế hoạch kết hôn.",
-    "link": "https://dantri.com.vn/giai-tri/nguoi-mau-kem-24-tuoi-khong-thich-bi-goi-la-ban-gai-cua-leonardo-dicaprio-20250326132021618.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Vittoria Ceretti có cảm xúc như thế nào về việc bị gọi là \"bạn gái của Leonardo DiCaprio\"?",
-    "answers": [
-      {
-        "text": "Cô không thích điều đó.",
-        "correct": true
-      },
-      {
-        "text": "Cô rất vui vẻ khi được gọi như vậy.",
-        "correct": false
-      },
-      {
-        "text": "Cô không quan tâm đến điều đó.",
-        "correct": false
-      },
-      {
-        "text": "Cô không biết điều đó.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống sữa thế nào giảm bùng phát cơn gout",
     "content": "Uống sữa không đường hàng ngày có thể giúp giảm nguy cơ bùng phát cơn gout nhờ tăng đào thải axit uric qua nước tiểu. Sữa có hàm lượng purin thấp và chứa vitamin D, hỗ trợ sức khỏe xương. Người bệnh gout nên lựa chọn sữa ít béo hoặc sữa hạt và hạn chế thực phẩm giàu purin để kiểm soát tình trạng bệnh.",
     "link": "https://vnexpress.net/uong-sua-the-nao-giam-bung-phat-con-gout-4866561.html",
@@ -609,6 +613,33 @@
       },
       {
         "text": "Uống sữa đặc giúp giảm triệu chứng gout.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người mẫu kém 24 tuổi không thích bị gọi là \"bạn gái của Leonardo DiCaprio\"",
+    "content": "Người mẫu Vittoria Ceretti không thích bị gọi là \"bạn gái của Leonardo DiCaprio\", mặc dù họ đã hẹn hò từ tháng 5/2023. Ceretti cho biết việc được gắn liền với tên tuổi của một người nổi tiếng khiến cô cảm thấy không thoải mái. Dù vậy, cô vẫn thừa nhận tình yêu với DiCaprio và khen ngợi anh là người đàn ông tử tế. Mối quan hệ của họ được cho là ngày càng gắn bó, nhưng hiện tại chưa có kế hoạch kết hôn.",
+    "link": "https://dantri.com.vn/giai-tri/nguoi-mau-kem-24-tuoi-khong-thich-bi-goi-la-ban-gai-cua-leonardo-dicaprio-20250326132021618.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Vittoria Ceretti có cảm xúc như thế nào về việc bị gọi là \"bạn gái của Leonardo DiCaprio\"?",
+    "answers": [
+      {
+        "text": "Cô không thích điều đó.",
+        "correct": true
+      },
+      {
+        "text": "Cô rất vui vẻ khi được gọi như vậy.",
+        "correct": false
+      },
+      {
+        "text": "Cô không quan tâm đến điều đó.",
+        "correct": false
+      },
+      {
+        "text": "Cô không biết điều đó.",
         "correct": false
       }
     ]
@@ -3474,33 +3505,6 @@
     ]
   },
   {
-    "title": "MV \"Đầu tư cho trái tim\" - Khi âm nhạc đồng điệu với nhịp đập trái tim",
-    "content": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD mang đến thông điệp ý nghĩa về việc chăm sóc sức khỏe trái tim, điều cần thiết để xây dựng một tương lai vững bền bên người thân yêu. Bằng giai điệu Pop, R&B bắt tai, bài hát thể hiện tình yêu và sự tận tụy của chàng trai dành cho người mình yêu, khẳng định rằng tình yêu cần được nuôi dưỡng mỗi ngày. MV không chỉ gợi nhớ về tình yêu lãng mạn mà còn kêu gọi mọi người hãy đầu tư cho sức khỏe tim mạch của chính mình và người thương.",
-    "link": "https://dantri.com.vn/giai-tri/mv-dau-tu-cho-trai-tim-khi-am-nhac-dong-dieu-voi-nhip-dap-trai-tim-20250326224106623.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD truyền tải thông điệp gì?",
-    "answers": [
-      {
-        "text": "Chăm sóc sức khỏe trái tim là quan trọng.",
-        "correct": true
-      },
-      {
-        "text": "Tình yêu không cần nuôi dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Cuộc sống không cần phải vững bền.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có tình yêu mới là đủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ba lỗi thường gặp khi vượt xe của tài xế mới",
     "content": "Trong bài viết này, chuyên gia chỉ ra ba lỗi thường gặp của tài xế mới khi vượt xe. Đầu tiên là việc vượt xe trong điều kiện tầm nhìn hạn chế, thứ hai là tốc độ quá chậm khi thực hiện hành động này, và cuối cùng là không sử dụng đèn cảnh báo. Những lỗi này có thể dẫn đến nguy hiểm cho cả tài xế và các phương tiện khác trên đường.",
     "link": "https://vnexpress.net/ba-loi-thuong-gap-khi-vuot-xe-cua-tai-xe-moi-4865654.html",
@@ -3527,6 +3531,33 @@
       },
       {
         "text": "Không giảm tốc độ, không quan sát, không sử dụng gương chiếu hậu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "MV \"Đầu tư cho trái tim\" - Khi âm nhạc đồng điệu với nhịp đập trái tim",
+    "content": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD mang đến thông điệp ý nghĩa về việc chăm sóc sức khỏe trái tim, điều cần thiết để xây dựng một tương lai vững bền bên người thân yêu. Bằng giai điệu Pop, R&B bắt tai, bài hát thể hiện tình yêu và sự tận tụy của chàng trai dành cho người mình yêu, khẳng định rằng tình yêu cần được nuôi dưỡng mỗi ngày. MV không chỉ gợi nhớ về tình yêu lãng mạn mà còn kêu gọi mọi người hãy đầu tư cho sức khỏe tim mạch của chính mình và người thương.",
+    "link": "https://dantri.com.vn/giai-tri/mv-dau-tu-cho-trai-tim-khi-am-nhac-dong-dieu-voi-nhip-dap-trai-tim-20250326224106623.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD truyền tải thông điệp gì?",
+    "answers": [
+      {
+        "text": "Chăm sóc sức khỏe trái tim là quan trọng.",
+        "correct": true
+      },
+      {
+        "text": "Tình yêu không cần nuôi dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Cuộc sống không cần phải vững bền.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có tình yêu mới là đủ.",
         "correct": false
       }
     ]
