--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -533,6 +533,68 @@
     ]
   },
   {
+    "title": "Tổng thống Ukraine nêu cách duy nhất chấm dứt xung đột với Nga trong 24 giờ",
+    "content": "Tổng thống Ukraine Volodymyr Zelensky cho rằng cách duy nhất để chấm dứt xung đột với Nga trong vòng 24 giờ là nhanh chóng đưa Ukraine gia nhập NATO. Ông nhấn mạnh rằng nếu Mỹ quyết định điều này, nó sẽ giúp thực hiện cam kết chấm dứt xung đột của Tổng thống Trump. Tuy nhiên, Zelensky cũng chỉ ra rằng Washington chưa chứng minh sự sẵn sàng cho việc này, điều này trở thành trở ngại lớn trong tiến trình.",
+    "link": "https://dantri.com.vn/the-gioi/tong-thong-ukraine-neu-cach-duy-nhat-cham-dut-xung-dot-voi-nga-trong-24-gio-20250327180952826.htm",
+    "cat": "the-gioi",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Cách nào để chấm dứt xung đột với Nga theo Tổng thống Ukraine?",
+    "answers": [
+      {
+        "text": "Đưa Ukraine gia nhập NATO",
+        "correct": true
+      },
+      {
+        "text": "Đàm phán với Nga",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường quân sự",
+        "correct": false
+      },
+      {
+        "text": "Hủy bỏ các lệnh trừng phạt",
+        "correct": false
+      },
+      {
+        "text": "Thỏa thuận hòa bình trước",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đắm tàu lặn du lịch chở 45 hành khách ở Ai Cập",
+    "content": "Một vụ đắm tàu lặn du lịch xảy ra ở Biển Đỏ, Ai Cập, khiến ít nhất 6 người nghi thiệt mạng, trong đó có 4 công dân Nga. Tàu lặn Sindbad, chở 45 hành khách và thủy thủ đoàn, đã bị đắm cách bờ khoảng 1km vào sáng ngày 27/3. Hầu hết những người trên tàu đã được cứu và đưa về khách sạn hoặc bệnh viện.",
+    "link": "https://dantri.com.vn/the-gioi/dam-tau-lan-du-lich-cho-45-hanh-khach-o-ai-cap-20250327183606346.htm",
+    "cat": "du-lich",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Vụ đắm tàu lặn du lịch ở Ai Cập đã xảy ra vào thời gian nào?",
+    "answers": [
+      {
+        "text": "Ngày 27/3",
+        "correct": true
+      },
+      {
+        "text": "Ngày 28/3",
+        "correct": false
+      },
+      {
+        "text": "Ngày 26/3",
+        "correct": false
+      },
+      {
+        "text": "Ngày 25/3",
+        "correct": false
+      },
+      {
+        "text": "Ngày 29/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bún thang lươn kiểu cổ",
     "content": "Bún thang lươn kiểu cổ là món ăn truyền thống với sự kết hợp giữa nhiều nguyên liệu như thịt lươn, trứng gà, giò lụa và ruốc sỏi. Nước dùng được chế biến từ xương lươn và xương lợn, mang hương vị ngọt thanh và thơm lừng. Món ăn này nổi bật với hình thức đẹp mắt và hương vị phong phú, thường được yêu thích ở Hưng Yên. Bài viết cũng chia sẻ cách chế biến và các mẹo để có được món bún thang lươn hoàn hảo.",
     "link": "https://vnexpress.net/bun-thang-luon-kieu-co-4866685.html",
@@ -1016,33 +1078,6 @@
     ]
   },
   {
-    "title": "8 thói quen tắm tốt cho da",
-    "content": "Bài viết đề cập đến 8 thói quen tắm tốt cho da, bao gồm việc tắm bằng nước ấm, sử dụng sản phẩm dịu nhẹ, và tắm không quá 10 phút. Đặc biệt, việc lựa chọn sản phẩm tắm phù hợp, gội đầu đúng cách và chăm sóc da sau khi tắm cũng rất quan trọng để bảo vệ và nuôi dưỡng làn da. Những thói quen này giúp cải thiện sức khỏe làn da và hạn chế các vấn đề như kích ứng và khô da.",
-    "link": "https://vnexpress.net/8-thoi-quen-tam-tot-cho-da-4866455.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những thói quen nào giúp bảo vệ làn da khi tắm?",
-    "answers": [
-      {
-        "text": "Tắm bằng nước ấm và sử dụng sản phẩm dịu nhẹ.",
-        "correct": true
-      },
-      {
-        "text": "Tắm bằng nước lạnh và không sử dụng sản phẩm dưỡng ẩm.",
-        "correct": false
-      },
-      {
-        "text": "Tắm lâu và sử dụng sản phẩm có nhiều thành phần.",
-        "correct": false
-      },
-      {
-        "text": "Tắm bằng nước nóng và không cần chăm sóc da sau khi tắm.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hắng giọng thường xuyên có phải mắc bệnh?",
     "content": "Hắng giọng thường xuyên có thể là phản xạ tự nhiên để làm sạch đường hô hấp, nhưng nếu xảy ra liên tục, nó có thể là dấu hiệu của một số bệnh lý như trào ngược dạ dày, viêm mũi họng mạn tính, hay dị ứng. Mặc dù không nguy hiểm, hắng giọng kéo dài có thể gây hại cho dây thanh quản, dẫn đến viêm mạn tính hoặc nốt xơ dây thanh. Nếu triệu chứng kéo dài hơn ba tháng hoặc kèm theo khàn tiếng, khó nuốt, cần đến bác sĩ để kiểm tra và điều trị kịp thời.",
     "link": "https://vnexpress.net/hang-giong-thuong-xuyen-co-phai-mac-benh-4866544.html",
@@ -1065,6 +1100,33 @@
       },
       {
         "text": "Không, nó là điều bình thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "8 thói quen tắm tốt cho da",
+    "content": "Bài viết đề cập đến 8 thói quen tắm tốt cho da, bao gồm việc tắm bằng nước ấm, sử dụng sản phẩm dịu nhẹ, và tắm không quá 10 phút. Đặc biệt, việc lựa chọn sản phẩm tắm phù hợp, gội đầu đúng cách và chăm sóc da sau khi tắm cũng rất quan trọng để bảo vệ và nuôi dưỡng làn da. Những thói quen này giúp cải thiện sức khỏe làn da và hạn chế các vấn đề như kích ứng và khô da.",
+    "link": "https://vnexpress.net/8-thoi-quen-tam-tot-cho-da-4866455.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những thói quen nào giúp bảo vệ làn da khi tắm?",
+    "answers": [
+      {
+        "text": "Tắm bằng nước ấm và sử dụng sản phẩm dịu nhẹ.",
+        "correct": true
+      },
+      {
+        "text": "Tắm bằng nước lạnh và không sử dụng sản phẩm dưỡng ẩm.",
+        "correct": false
+      },
+      {
+        "text": "Tắm lâu và sử dụng sản phẩm có nhiều thành phần.",
+        "correct": false
+      },
+      {
+        "text": "Tắm bằng nước nóng và không cần chăm sóc da sau khi tắm.",
         "correct": false
       }
     ]
@@ -2427,33 +2489,6 @@
     ]
   },
   {
-    "title": "4 món ăn làm chậm lão hóa, kéo dài tuổi thọ",
-    "content": "Bài viết giới thiệu 4 món ăn giúp làm chậm lão hóa và kéo dài tuổi thọ, bao gồm hạnh nhân, quả bơ, chocolate đen và cá béo. Những thực phẩm này chứa nhiều chất chống oxy hóa, vitamin và protein có lợi cho sức khỏe, giúp cải thiện làn da, duy trì cơ bắp và bảo vệ sức khỏe tổng thể. Việc bổ sung các món ăn này vào chế độ ăn hàng ngày có thể hỗ trợ quá trình chống lão hóa và kéo dài tuổi thọ.",
-    "link": "https://vnexpress.net/4-mon-an-lam-cham-lao-hoa-keo-dai-tuoi-tho-4866431.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món ăn nào giúp làm chậm lão hóa và kéo dài tuổi thọ?",
-    "answers": [
-      {
-        "text": "Hạnh nhân, quả bơ, chocolate đen, cá béo",
-        "correct": true
-      },
-      {
-        "text": "Bánh ngọt, nước ngọt, món chiên",
-        "correct": false
-      },
-      {
-        "text": "Rau sống, nước ép trái cây, cơm trắng",
-        "correct": false
-      },
-      {
-        "text": "Thịt đỏ, đồ ăn nhanh, kem",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khi nào điều trị ung thư phổi bằng liệu pháp nhắm trúng đích?",
     "content": "Liệu pháp nhắm trúng đích là phương pháp điều trị ung thư phổi cho những bệnh nhân có đột biến gene cụ thể. Phương pháp này có thể giúp tiêu diệt các tế bào ung thư mà không gây hại cho các tế bào lành tính, thường được áp dụng cho ung thư phổi không tế bào nhỏ. Tuy nhiên, không phải tất cả bệnh nhân đều phù hợp với liệu pháp này, chỉ những người có đặc điểm di truyền phù hợp mới có thể được điều trị bằng liệu pháp nhắm trúng đích.",
     "link": "https://vnexpress.net/khi-nao-dieu-tri-ung-thu-phoi-bang-lieu-phap-nham-trung-dich-4866540.html",
@@ -2476,6 +2511,33 @@
       },
       {
         "text": "Khi bệnh nhân không có triệu chứng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 món ăn làm chậm lão hóa, kéo dài tuổi thọ",
+    "content": "Bài viết giới thiệu 4 món ăn giúp làm chậm lão hóa và kéo dài tuổi thọ, bao gồm hạnh nhân, quả bơ, chocolate đen và cá béo. Những thực phẩm này chứa nhiều chất chống oxy hóa, vitamin và protein có lợi cho sức khỏe, giúp cải thiện làn da, duy trì cơ bắp và bảo vệ sức khỏe tổng thể. Việc bổ sung các món ăn này vào chế độ ăn hàng ngày có thể hỗ trợ quá trình chống lão hóa và kéo dài tuổi thọ.",
+    "link": "https://vnexpress.net/4-mon-an-lam-cham-lao-hoa-keo-dai-tuoi-tho-4866431.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món ăn nào giúp làm chậm lão hóa và kéo dài tuổi thọ?",
+    "answers": [
+      {
+        "text": "Hạnh nhân, quả bơ, chocolate đen, cá béo",
+        "correct": true
+      },
+      {
+        "text": "Bánh ngọt, nước ngọt, món chiên",
+        "correct": false
+      },
+      {
+        "text": "Rau sống, nước ép trái cây, cơm trắng",
+        "correct": false
+      },
+      {
+        "text": "Thịt đỏ, đồ ăn nhanh, kem",
         "correct": false
       }
     ]
