Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -529,6 +529,68 @@
     ]
   },
   {
+    "title": "NSND Vũ Thị Kim Dung -\"giọng ngâm thơ vàng\" - qua đời",
+    "content": "Nghệ sĩ ngâm thơ nổi tiếng Vũ Thị Kim Dung đã qua đời tại Praha, Cộng hòa Séc, vào ngày 26 tháng 3 năm 2025, thọ 80 tuổi sau một thời gian dài chống chọi với bệnh ung thư. Bà được biết đến với danh xưng 'giọng ngâm thơ vàng', đã có nhiều đóng góp cho nghệ thuật ngâm thơ và tình yêu với thi ca. Trong suốt cuộc đời nghệ thuật của mình, bà không chỉ phục vụ trên sóng phát thanh mà còn đào tạo nhiều thế hệ nghệ sĩ trẻ, để lại nhiều kỷ niệm và ảnh hưởng sâu sắc trong lòng công chúng.",
+    "link": "https://dantri.com.vn/giai-tri/nsnd-vu-thi-kim-dung-giong-ngam-tho-vang-qua-doi-20250327182521250.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 8,
+    "question": "NSND Vũ Thị Kim Dung đã qua đời vào ngày nào?",
+    "answers": [
+      {
+        "text": "26 tháng 3 năm 2025",
+        "correct": true
+      },
+      {
+        "text": "27 tháng 3 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "25 tháng 3 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "28 tháng 3 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "24 tháng 3 năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khảo sát: 69% người dân Ukraine tín nhiệm ông Zelensky",
+    "content": "Theo khảo sát mới nhất của Viện Xã hội học Quốc tế Kiev, 69% người dân Ukraine bày tỏ sự tín nhiệm đối với Tổng thống Volodymyr Zelensky tính đến tháng 3 năm 2025. Mặc dù có những chỉ trích về một số quyết định của chính quyền, ông Zelensky vẫn được coi là người đại diện cho lợi ích của Ukraine và người dân. Cuộc khảo sát cho thấy sự tin tưởng này chủ yếu đến từ việc người dân nhận thức rõ mối đe dọa từ Nga, với 77% phản đối việc tổ chức bầu cử trong trường hợp không có đảm bảo an ninh.",
+    "link": "https://dantri.com.vn/the-gioi/khao-sat-69-nguoi-dan-ukraine-tin-nhiem-ong-zelensky-20250327182124529.htm",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mức độ tín nhiệm của ông Zelensky hiện nay là bao nhiêu?",
+    "answers": [
+      {
+        "text": "69%",
+        "correct": true
+      },
+      {
+        "text": "50%",
+        "correct": false
+      },
+      {
+        "text": "75%",
+        "correct": false
+      },
+      {
+        "text": "80%",
+        "correct": false
+      },
+      {
+        "text": "60%",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đà Nẵng cải tạo công viên 29/3",
     "content": "Ngày 27/3, TP Đà Nẵng đã khởi công dự án cải tạo công viên 29/3 tại quận Thanh Khê với tổng đầu tư hơn 670 tỷ đồng. Dự án gồm nhiều hạng mục như bến thuyền, sân khấu ngoài trời và đặc biệt là \"chiếc nhẫn hòa bình\" trên mặt hồ. Ông Lê Quang Nam, Phó chủ tịch TP Đà Nẵng, cho biết công viên này sẽ trở thành biểu tượng hòa bình và nâng cao đời sống tinh thần cho người dân.",
     "link": "https://vnexpress.net/da-nang-cai-tao-cong-vien-29-3-4866726.html",
