--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Phó chủ tịch VFF Trần Anh Tú rút đơn xin nghỉ",
+    "content": "Phó chủ tịch LĐBĐ Việt Nam (VFF) Trần Anh Tú đã quyết định rút lại đơn xin nghỉ việc mà ông đã gửi vào ngày 12/3. Quyết định này được đưa ra sau khi nhiều thành viên trong Ban chấp hành VFF, bao gồm chủ tịch Trần Quốc Tuấn, thuyết phục ông tiếp tục công việc. Ông Tú sẽ tiếp tục giữ chức vụ Phó chủ tịch phụ trách chuyên môn và Chủ tịch HĐQT Công ty cổ phần bóng đá chuyên nghiệp Việt Nam (VPF).",
+    "link": "https://vnexpress.net/pho-chu-tich-vff-tran-anh-tu-rut-don-xin-nghi-4866740.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Trần Anh Tú rút đơn xin nghỉ?",
+    "answers": [
+      {
+        "text": "Vì được thuyết phục tiếp tục công việc",
+        "correct": true
+      },
+      {
+        "text": "Muốn tập trung vào công việc kinh doanh",
+        "correct": false
+      },
+      {
+        "text": "Không còn hứng thú với bóng đá",
+        "correct": false
+      },
+      {
+        "text": "Để nhường chỗ cho người khác",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nữ chủ tịch U90 tại một công ty ở TP.HCM thu nhập khủng, bỏ xa nhiều sếp ngân hàng",
     "content": "Bà Nguyễn Bạch Tuyết, chủ tịch Công ty cổ phần Khử trùng Việt Nam, đã ghi nhận thu nhập 7,72 tỉ đồng trong năm 2024, vượt xa nhiều sếp ngân hàng tại Việt Nam. Ngoài ra, trong quý 1 năm 2024, bà Tuyết còn nhận thêm khoản thưởng lên đến 22,35 tỉ đồng, cho thấy sự tăng trưởng mạnh mẽ của công ty. Doanh thu thuần của VFG đạt 3.497 tỉ đồng, tăng 7% so với năm trước, và lợi nhuận sau thuế cũng tăng gần 60%. Điều này phản ánh sự thành công của công ty trong việc cải thiện hiệu quả kinh doanh.",
     "link": "https://tuoitre.vn/nu-chu-tich-u90-tai-mot-cong-ty-o-tp-hcm-thu-nhap-khung-bo-xa-nhieu-sep-ngan-hang-20250327181202631.htm",
@@ -512,28 +539,28 @@
     ]
   },
   {
-    "title": "Uống sữa thế nào giảm bùng phát cơn gout",
-    "content": "Uống sữa không đường hàng ngày có thể giúp giảm nguy cơ bùng phát cơn gout nhờ tăng đào thải axit uric qua nước tiểu. Sữa có hàm lượng purin thấp và chứa vitamin D, hỗ trợ sức khỏe xương. Người bệnh gout nên lựa chọn sữa ít béo hoặc sữa hạt và hạn chế thực phẩm giàu purin để kiểm soát tình trạng bệnh.",
-    "link": "https://vnexpress.net/uong-sua-the-nao-giam-bung-phat-con-gout-4866561.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào uống sữa có thể giúp giảm bùng phát cơn gout?",
+    "title": "Cát Bà - ‘gu du lịch’ mới mà quen",
+    "content": "Cát Bà đang trở thành một điểm đến du lịch hấp dẫn với sự kết hợp giữa vẻ đẹp thiên nhiên và văn hóa độc đáo. Hòn đảo này được UNESCO công nhận là Di sản Thiên nhiên Thế giới, đang phát triển mạnh mẽ các trải nghiệm du lịch bền vững và hấp dẫn. Sự xuất hiện của tuyến cáp treo vượt biển đã giúp rút ngắn thời gian di chuyển và mang lại trải nghiệm mới cho du khách. Cát Bà không chỉ thu hút du khách bằng cảnh đẹp mà còn qua các sự kiện văn hóa nghệ thuật đặc sắc, biến chuyến đi thành những câu chuyện thú vị.",
+    "link": "https://tuoitre.vn/cat-ba-gu-du-lich-moi-ma-quen-20250327170014497.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tại sao Cát Bà được coi là điểm đến du lịch hấp dẫn?",
     "answers": [
       {
-        "text": "Uống sữa không đường giúp tăng đào thải axit uric.",
+        "text": "Vì có vẻ đẹp thiên nhiên và văn hóa độc đáo.",
         "correct": true
       },
       {
-        "text": "Uống sữa nguyên kem làm tăng nồng độ axit uric.",
+        "text": "Vì nơi đây có nhiều khách sạn sang trọng.",
         "correct": false
       },
       {
-        "text": "Uống sữa có đường giúp cải thiện triệu chứng gout.",
+        "text": "Vì Cát Bà có nhiều món ăn ngon.",
         "correct": false
       },
       {
-        "text": "Uống sữa đặc giúp giảm triệu chứng gout.",
+        "text": "Vì thời tiết ở Cát Bà luôn đẹp.",
         "correct": false
       }
     ]
@@ -566,28 +593,28 @@
     ]
   },
   {
-    "title": "Cát Bà - ‘gu du lịch’ mới mà quen",
-    "content": "Cát Bà đang trở thành một điểm đến du lịch hấp dẫn với sự kết hợp giữa vẻ đẹp thiên nhiên và văn hóa độc đáo. Hòn đảo này được UNESCO công nhận là Di sản Thiên nhiên Thế giới, đang phát triển mạnh mẽ các trải nghiệm du lịch bền vững và hấp dẫn. Sự xuất hiện của tuyến cáp treo vượt biển đã giúp rút ngắn thời gian di chuyển và mang lại trải nghiệm mới cho du khách. Cát Bà không chỉ thu hút du khách bằng cảnh đẹp mà còn qua các sự kiện văn hóa nghệ thuật đặc sắc, biến chuyến đi thành những câu chuyện thú vị.",
-    "link": "https://tuoitre.vn/cat-ba-gu-du-lich-moi-ma-quen-20250327170014497.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Tại sao Cát Bà được coi là điểm đến du lịch hấp dẫn?",
+    "title": "Uống sữa thế nào giảm bùng phát cơn gout",
+    "content": "Uống sữa không đường hàng ngày có thể giúp giảm nguy cơ bùng phát cơn gout nhờ tăng đào thải axit uric qua nước tiểu. Sữa có hàm lượng purin thấp và chứa vitamin D, hỗ trợ sức khỏe xương. Người bệnh gout nên lựa chọn sữa ít béo hoặc sữa hạt và hạn chế thực phẩm giàu purin để kiểm soát tình trạng bệnh.",
+    "link": "https://vnexpress.net/uong-sua-the-nao-giam-bung-phat-con-gout-4866561.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào uống sữa có thể giúp giảm bùng phát cơn gout?",
     "answers": [
       {
-        "text": "Vì có vẻ đẹp thiên nhiên và văn hóa độc đáo.",
+        "text": "Uống sữa không đường giúp tăng đào thải axit uric.",
         "correct": true
       },
       {
-        "text": "Vì nơi đây có nhiều khách sạn sang trọng.",
+        "text": "Uống sữa nguyên kem làm tăng nồng độ axit uric.",
         "correct": false
       },
       {
-        "text": "Vì Cát Bà có nhiều món ăn ngon.",
+        "text": "Uống sữa có đường giúp cải thiện triệu chứng gout.",
         "correct": false
       },
       {
-        "text": "Vì thời tiết ở Cát Bà luôn đẹp.",
+        "text": "Uống sữa đặc giúp giảm triệu chứng gout.",
         "correct": false
       }
     ]
@@ -2290,33 +2317,6 @@
     ]
   },
   {
-    "title": "Khi nào điều trị ung thư phổi bằng liệu pháp nhắm trúng đích?",
-    "content": "Liệu pháp nhắm trúng đích là phương pháp điều trị ung thư phổi cho những bệnh nhân có đột biến gene cụ thể. Phương pháp này có thể giúp tiêu diệt các tế bào ung thư mà không gây hại cho các tế bào lành tính, thường được áp dụng cho ung thư phổi không tế bào nhỏ. Tuy nhiên, không phải tất cả bệnh nhân đều phù hợp với liệu pháp này, chỉ những người có đặc điểm di truyền phù hợp mới có thể được điều trị bằng liệu pháp nhắm trúng đích.",
-    "link": "https://vnexpress.net/khi-nao-dieu-tri-ung-thu-phoi-bang-lieu-phap-nham-trung-dich-4866540.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Khi nào bệnh nhân ung thư phổi nên điều trị bằng liệu pháp nhắm trúng đích?",
-    "answers": [
-      {
-        "text": "Khi có các đột biến gene cụ thể ở tế bào ung thư",
-        "correct": true
-      },
-      {
-        "text": "Khi bệnh nhân không muốn điều trị",
-        "correct": false
-      },
-      {
-        "text": "Khi bệnh nhân ở giai đoạn đầu của bệnh",
-        "correct": false
-      },
-      {
-        "text": "Khi bệnh nhân không có triệu chứng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 món ăn làm chậm lão hóa, kéo dài tuổi thọ",
     "content": "Bài viết giới thiệu 4 món ăn giúp làm chậm lão hóa và kéo dài tuổi thọ, bao gồm hạnh nhân, quả bơ, chocolate đen và cá béo. Những thực phẩm này chứa nhiều chất chống oxy hóa, vitamin và protein có lợi cho sức khỏe, giúp cải thiện làn da, duy trì cơ bắp và bảo vệ sức khỏe tổng thể. Việc bổ sung các món ăn này vào chế độ ăn hàng ngày có thể hỗ trợ quá trình chống lão hóa và kéo dài tuổi thọ.",
     "link": "https://vnexpress.net/4-mon-an-lam-cham-lao-hoa-keo-dai-tuoi-tho-4866431.html",
@@ -2339,6 +2339,33 @@
       },
       {
         "text": "Thịt đỏ, đồ ăn nhanh, kem",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khi nào điều trị ung thư phổi bằng liệu pháp nhắm trúng đích?",
+    "content": "Liệu pháp nhắm trúng đích là phương pháp điều trị ung thư phổi cho những bệnh nhân có đột biến gene cụ thể. Phương pháp này có thể giúp tiêu diệt các tế bào ung thư mà không gây hại cho các tế bào lành tính, thường được áp dụng cho ung thư phổi không tế bào nhỏ. Tuy nhiên, không phải tất cả bệnh nhân đều phù hợp với liệu pháp này, chỉ những người có đặc điểm di truyền phù hợp mới có thể được điều trị bằng liệu pháp nhắm trúng đích.",
+    "link": "https://vnexpress.net/khi-nao-dieu-tri-ung-thu-phoi-bang-lieu-phap-nham-trung-dich-4866540.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Khi nào bệnh nhân ung thư phổi nên điều trị bằng liệu pháp nhắm trúng đích?",
+    "answers": [
+      {
+        "text": "Khi có các đột biến gene cụ thể ở tế bào ung thư",
+        "correct": true
+      },
+      {
+        "text": "Khi bệnh nhân không muốn điều trị",
+        "correct": false
+      },
+      {
+        "text": "Khi bệnh nhân ở giai đoạn đầu của bệnh",
+        "correct": false
+      },
+      {
+        "text": "Khi bệnh nhân không có triệu chứng",
         "correct": false
       }
     ]
@@ -2460,37 +2487,6 @@
     ]
   },
   {
-    "title": "Con gái 17 tuổi của Trương Ngọc Ánh: Cao hơn 1,7m, được khuyên thi hoa hậu",
-    "content": "Bảo Tiên, con gái 17 tuổi của Trương Ngọc Ánh, đang nhận được nhiều lời khen ngợi về vẻ đẹp và sự trưởng thành. Cô bé cao hơn 1,7m và có phong cách hiện đại, cá tính. Bảo Tiên đã được khuyên nên thi hoa hậu khi đủ tuổi, nhưng mẹ cô tôn trọng sự chọn lựa của con. Trương Ngọc Ánh cho biết, mối quan hệ giữa cô và chồng cũ vẫn tốt đẹp và cả hai luôn yêu thương con gái.",
-    "link": "https://dantri.com.vn/giai-tri/con-gai-17-tuoi-cua-truong-ngoc-anh-cao-hon-17m-duoc-khuyen-thi-hoa-hau-20250326064839734.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Con gái Trương Ngọc Ánh tên gì và hiện bao nhiêu tuổi?",
-    "answers": [
-      {
-        "text": "Bảo Tiên, 17 tuổi",
-        "correct": true
-      },
-      {
-        "text": "Ngọc Anh, 18 tuổi",
-        "correct": false
-      },
-      {
-        "text": "Hà Linh, 16 tuổi",
-        "correct": false
-      },
-      {
-        "text": "Trần Bảo, 15 tuổi",
-        "correct": false
-      },
-      {
-        "text": "Tiên Nguyễn, 19 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chế độ ăn giúp bác sĩ Mỹ đảo ngược 15 năm tuổi sinh học",
     "content": "Bác sĩ Eric Verdin, CEO Viện Nghiên cứu Lão hóa Buck, đã áp dụng chế độ ăn Địa Trung Hải để đảo ngược 15 năm tuổi sinh học của mình. Chế độ ăn này khuyến khích tiêu thụ nhiều trái cây, rau củ, ngũ cốc nguyên hạt và hạn chế thực phẩm siêu chế biến cũng như rượu bia. Verdin tin rằng lối sống lành mạnh, bao gồm chế độ ăn uống hợp lý, có ảnh hưởng lớn hơn đến sức khỏe và tuổi thọ so với yếu tố di truyền.",
     "link": "https://vnexpress.net/che-do-an-giup-bac-si-my-dao-nguoc-15-nam-tuoi-sinh-hoc-4866473.html",
@@ -2517,6 +2513,37 @@
       },
       {
         "text": "Chế độ ăn nhiều đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Con gái 17 tuổi của Trương Ngọc Ánh: Cao hơn 1,7m, được khuyên thi hoa hậu",
+    "content": "Bảo Tiên, con gái 17 tuổi của Trương Ngọc Ánh, đang nhận được nhiều lời khen ngợi về vẻ đẹp và sự trưởng thành. Cô bé cao hơn 1,7m và có phong cách hiện đại, cá tính. Bảo Tiên đã được khuyên nên thi hoa hậu khi đủ tuổi, nhưng mẹ cô tôn trọng sự chọn lựa của con. Trương Ngọc Ánh cho biết, mối quan hệ giữa cô và chồng cũ vẫn tốt đẹp và cả hai luôn yêu thương con gái.",
+    "link": "https://dantri.com.vn/giai-tri/con-gai-17-tuoi-cua-truong-ngoc-anh-cao-hon-17m-duoc-khuyen-thi-hoa-hau-20250326064839734.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Con gái Trương Ngọc Ánh tên gì và hiện bao nhiêu tuổi?",
+    "answers": [
+      {
+        "text": "Bảo Tiên, 17 tuổi",
+        "correct": true
+      },
+      {
+        "text": "Ngọc Anh, 18 tuổi",
+        "correct": false
+      },
+      {
+        "text": "Hà Linh, 16 tuổi",
+        "correct": false
+      },
+      {
+        "text": "Trần Bảo, 15 tuổi",
+        "correct": false
+      },
+      {
+        "text": "Tiên Nguyễn, 19 tuổi",
         "correct": false
       }
     ]
@@ -2970,33 +2997,6 @@
     ]
   },
   {
-    "title": "Vì sao viêm teo niêm mạc dạ dày?",
-    "content": "Viêm teo niêm mạc dạ dày là tình trạng viêm mạn tính tại niêm mạc dạ dày, thường do nhiễm vi khuẩn H.pylori, trào ngược dịch mật, hoặc do thuốc. Bệnh cũng có thể do yếu tố tự miễn gây ra. Việc điều trị có thể đạt tỷ lệ thành công cao, khoảng 80-95% nếu phát hiện sớm và điều trị đúng cách. Mặc dù viêm teo dạ dày có thể dẫn đến ung thư, hầu hết bệnh nhân có thể được điều trị hiệu quả nếu tuân thủ hướng dẫn của bác sĩ.",
-    "link": "https://vnexpress.net/vi-sao-viem-teo-niem-mac-da-day-4866442.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Vì sao mẹ tôi bị viêm teo niêm mạc dạ dày?",
-    "answers": [
-      {
-        "text": "Do nhiễm vi khuẩn H.pylori",
-        "correct": true
-      },
-      {
-        "text": "Do ăn uống không hợp vệ sinh",
-        "correct": false
-      },
-      {
-        "text": "Do lạm dụng thuốc giảm đau",
-        "correct": false
-      },
-      {
-        "text": "Do di truyền từ gia đình",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lê Hồng Lâm: 'TV như cầu nối cảm xúc với điện ảnh'",
     "content": "Lê Hồng Lâm, nhà phê bình điện ảnh, cho rằng TV hiện đại, đặc biệt là mẫu Sony Bravia 8 với công nghệ màn hình Oled và bộ xử lý nhận thức, có khả năng truyền tải trọn vẹn cảm xúc và ý đồ của các tác phẩm điện ảnh. Anh chia sẻ về niềm đam mê điện ảnh từ nhỏ, và cách mà công nghệ hiện đại giúp xóa nhòa ranh giới giữa xem phim tại rạp và tại nhà. Qua trải nghiệm với bộ phim 'Once upon a time in Hollywood', Lê Hồng Lâm cảm nhận được sự sống động và chân thực mà công nghệ mang lại, từ hình ảnh đến âm thanh, tạo nên những khoảnh khắc điện ảnh đáng nhớ.",
     "link": "https://vnexpress.net/le-hong-lam-tv-nhu-cau-noi-cam-xuc-voi-dien-anh-4864243.html",
@@ -3046,6 +3046,33 @@
       },
       {
         "text": "Không hiệu quả đối với mọi loại da",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao viêm teo niêm mạc dạ dày?",
+    "content": "Viêm teo niêm mạc dạ dày là tình trạng viêm mạn tính tại niêm mạc dạ dày, thường do nhiễm vi khuẩn H.pylori, trào ngược dịch mật, hoặc do thuốc. Bệnh cũng có thể do yếu tố tự miễn gây ra. Việc điều trị có thể đạt tỷ lệ thành công cao, khoảng 80-95% nếu phát hiện sớm và điều trị đúng cách. Mặc dù viêm teo dạ dày có thể dẫn đến ung thư, hầu hết bệnh nhân có thể được điều trị hiệu quả nếu tuân thủ hướng dẫn của bác sĩ.",
+    "link": "https://vnexpress.net/vi-sao-viem-teo-niem-mac-da-day-4866442.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Vì sao mẹ tôi bị viêm teo niêm mạc dạ dày?",
+    "answers": [
+      {
+        "text": "Do nhiễm vi khuẩn H.pylori",
+        "correct": true
+      },
+      {
+        "text": "Do ăn uống không hợp vệ sinh",
+        "correct": false
+      },
+      {
+        "text": "Do lạm dụng thuốc giảm đau",
+        "correct": false
+      },
+      {
+        "text": "Do di truyền từ gia đình",
         "correct": false
       }
     ]
@@ -4318,37 +4345,6 @@
     ]
   },
   {
-    "title": "Phương pháp 'ăn như trẻ nhỏ' để giảm cân",
-    "content": "Phương pháp 'ăn như trẻ nhỏ' được chuyên gia dinh dưỡng Nicolette Pace khuyến nghị như một cách hiệu quả để giảm cân và duy trì sức khỏe. Bà đề xuất ba nguyên tắc chính: ăn theo chu kỳ 2-4 tiếng, ăn chậm và nhai kỹ, cùng với việc tránh ăn vặt vô thức. Những thói quen này không chỉ giúp kiểm soát cân nặng mà còn cải thiện tiêu hóa và cảm nhận hương vị của món ăn.",
-    "link": "https://vnexpress.net/phuong-phap-an-nhu-tre-nho-de-giam-can-4865503.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Phương pháp nào giúp giảm cân theo thói quen của trẻ nhỏ?",
-    "answers": [
-      {
-        "text": "Ăn theo chu kỳ 2-4 tiếng",
-        "correct": true
-      },
-      {
-        "text": "Ăn tối muộn",
-        "correct": false
-      },
-      {
-        "text": "Uống nhiều nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Không ăn vặt",
-        "correct": false
-      },
-      {
-        "text": "Tiêu thụ nhiều đồ ăn nhanh",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Huỳnh Hiểu Minh: Đại gia làng giải trí và những mối tình \"ồn ào\"",
     "content": "Huỳnh Hiểu Minh là một trong những ngôi sao hàng đầu của làng giải trí Hoa ngữ với hơn 20 năm hoạt động và khối tài sản ước tính lên tới 10 tỷ NDT. Anh nổi tiếng không chỉ với sự nghiệp diễn xuất thành công mà còn với nhiều mối tình ồn ào, bao gồm cuộc hôn nhân với Angelababy và mối quan hệ hiện tại với Diệp Kha. Dù sự nghiệp gần đây gặp khó khăn với bộ phim \"The Wig\" không thành công, Huỳnh Hiểu Minh vẫn giữ được vị thế và tiếng tăm trong ngành giải trí.",
     "link": "https://dantri.com.vn/giai-tri/huynh-hieu-minh-dai-gia-lang-giai-tri-va-nhung-moi-tinh-on-ao-20250324115320186.htm",
@@ -4375,6 +4371,37 @@
       },
       {
         "text": "Vai diễn trong Lộc đỉnh ký",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phương pháp 'ăn như trẻ nhỏ' để giảm cân",
+    "content": "Phương pháp 'ăn như trẻ nhỏ' được chuyên gia dinh dưỡng Nicolette Pace khuyến nghị như một cách hiệu quả để giảm cân và duy trì sức khỏe. Bà đề xuất ba nguyên tắc chính: ăn theo chu kỳ 2-4 tiếng, ăn chậm và nhai kỹ, cùng với việc tránh ăn vặt vô thức. Những thói quen này không chỉ giúp kiểm soát cân nặng mà còn cải thiện tiêu hóa và cảm nhận hương vị của món ăn.",
+    "link": "https://vnexpress.net/phuong-phap-an-nhu-tre-nho-de-giam-can-4865503.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Phương pháp nào giúp giảm cân theo thói quen của trẻ nhỏ?",
+    "answers": [
+      {
+        "text": "Ăn theo chu kỳ 2-4 tiếng",
+        "correct": true
+      },
+      {
+        "text": "Ăn tối muộn",
+        "correct": false
+      },
+      {
+        "text": "Uống nhiều nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Không ăn vặt",
+        "correct": false
+      },
+      {
+        "text": "Tiêu thụ nhiều đồ ăn nhanh",
         "correct": false
       }
     ]
