Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Giá heo hơi lên 80.000 đồng/kg, Phó thủ tướng chỉ đạo đánh giá thị trường",
+    "content": "Giá heo hơi tại Việt Nam đã đạt mức cao nhất trong 5 năm qua, lên tới 80.000 đồng/kg, khiến Phó Thủ tướng Trần Hồng Hà yêu cầu đánh giá lại tình hình thị trường và thúc đẩy tái đàn. Nguyên nhân chính dẫn đến sự tăng giá này là do dịch bệnh làm giảm đàn heo và chi phí thức ăn tăng cao. Dự báo giá heo sẽ ổn định trong khoảng 75.000 - 80.000 đồng/kg đến hết tháng 3-2025, nhưng tình hình cung cầu thịt heo vẫn chưa thể phục hồi hoàn toàn.",
+    "link": "https://tuoitre.vn/gia-heo-hoi-len-80-000-dong-kg-pho-thu-tuong-chi-dao-danh-gia-thi-truong-20250327193935317.htm",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao giá heo hơi tăng cao nhất trong 5 năm qua?",
+    "answers": [
+      {
+        "text": "Do dịch bệnh làm giảm sản lượng heo.",
+        "correct": true
+      },
+      {
+        "text": "Giá thức ăn chăn nuôi giảm.",
+        "correct": false
+      },
+      {
+        "text": "Nhu cầu thịt heo giảm.",
+        "correct": false
+      },
+      {
+        "text": "Thị trường nhập khẩu heo tăng mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Chính phủ không kiểm soát giá.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tạm dừng cho du khách tham quan cột mốc số 0 ở cực Tây Tổ quốc",
     "content": "Cơ quan chức năng đã quyết định tạm dừng hoạt động tham quan cột mốc số 0 tại ngã ba biên giới Việt Nam - Lào - Trung Quốc trong thời gian từ 4 đến 6 tháng để thi công đường và cải thiện cơ sở hạ tầng. Quyết định này nhằm đảm bảo an toàn cho du khách và người dân khi di chuyển qua khu vực. Dự án mở rộng tuyến đường hiện tại từ xe máy sang ô tô sẽ được thực hiện trong thời gian này, và cơ quan chức năng sẽ tính toán để mở cửa cho du khách tham quan từng hạng mục khi có thể.",
     "link": "https://tuoitre.vn/tam-dung-cho-du-khach-tham-quan-cot-moc-so-0-o-cuc-tay-to-quoc-20250327182247911.htm",
@@ -885,32 +916,28 @@
     ]
   },
   {
-    "title": "Mbappe từ bỏ bao nhiêu tiền để gia nhập Real",
-    "content": "Kylian Mbappe đã từ bỏ một khoản tiền lớn để gia nhập Real Madrid từ PSG. Theo thông tin, nếu ở lại PSG, anh có thể kiếm được tới 195 triệu USD, trong khi mức lương tại Real chỉ là 77 triệu USD cộng với một khoản thưởng ký hợp đồng 107 triệu USD. Quyết định này khiến Mbappe trở thành cầu thủ có thể kiếm tiền nhiều nhất trong lịch sử PSG, nhưng anh lựa chọn Real để theo đuổi vinh quang Champions League, điều mà anh chưa đạt được trong suốt sự nghiệp của mình.",
-    "link": "https://vnexpress.net/mbappe-tu-bo-bao-nhieu-tien-de-gia-nhap-real-4866623.html",
+    "title": "Mbappe từ bỏ 270 triệu USD để gia nhập Real",
+    "content": "Kylian Mbappe đã từ bỏ cơ hội kiếm 270 triệu USD từ PSG để chuyển sang Real Madrid, nơi anh sẽ nhận khoảng 77 triệu USD mỗi mùa cùng với 107 triệu USD tiền thưởng ký hợp đồng. Nếu ở lại PSG, Mbappe có thể trở thành cầu thủ kiếm tiền nhiều nhất thế giới, vượt qua Cristiano Ronaldo. Tuy nhiên, việc chuyển nhượng này cũng đi kèm với những vấn đề pháp lý giữa Mbappe và PSG về tiền thưởng trung thành chưa được thanh toán.",
+    "link": "https://vnexpress.net/mbappe-tu-bo-270-trieu-usd-de-gia-nhap-real-4866623.html",
     "cat": "the-thao",
     "positivity": 7,
-    "importance": 8,
-    "question": "Mbappe đã từ bỏ bao nhiêu tiền để gia nhập Real Madrid?",
+    "importance": 9,
+    "question": "Tại sao Mbappe từ bỏ 270 triệu USD để gia nhập Real?",
     "answers": [
       {
-        "text": "Khoảng 195 triệu USD",
+        "text": "Do cơ hội chinh phục Champions League với Real",
         "correct": true
       },
       {
-        "text": "Khoảng 150 triệu USD",
+        "text": "Vì lương cao hơn tại PSG",
         "correct": false
       },
       {
-        "text": "Khoảng 100 triệu USD",
+        "text": "Vì muốn thử thách mới tại giải đấu khác",
         "correct": false
       },
       {
-        "text": "Khoảng 80 triệu USD",
-        "correct": false
-      },
-      {
-        "text": "Khoảng 60 triệu USD",
+        "text": "Vì mâu thuẫn với ban lãnh đạo PSG",
         "correct": false
       }
     ]
@@ -3772,6 +3799,33 @@
     ]
   },
   {
+    "title": "MV \"Đầu tư cho trái tim\" - Khi âm nhạc đồng điệu với nhịp đập trái tim",
+    "content": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD mang đến thông điệp ý nghĩa về việc chăm sóc sức khỏe trái tim, điều cần thiết để xây dựng một tương lai vững bền bên người thân yêu. Bằng giai điệu Pop, R&B bắt tai, bài hát thể hiện tình yêu và sự tận tụy của chàng trai dành cho người mình yêu, khẳng định rằng tình yêu cần được nuôi dưỡng mỗi ngày. MV không chỉ gợi nhớ về tình yêu lãng mạn mà còn kêu gọi mọi người hãy đầu tư cho sức khỏe tim mạch của chính mình và người thương.",
+    "link": "https://dantri.com.vn/giai-tri/mv-dau-tu-cho-trai-tim-khi-am-nhac-dong-dieu-voi-nhip-dap-trai-tim-20250326224106623.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD truyền tải thông điệp gì?",
+    "answers": [
+      {
+        "text": "Chăm sóc sức khỏe trái tim là quan trọng.",
+        "correct": true
+      },
+      {
+        "text": "Tình yêu không cần nuôi dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Cuộc sống không cần phải vững bền.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có tình yêu mới là đủ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ba lỗi thường gặp khi vượt xe của tài xế mới",
     "content": "Trong bài viết này, chuyên gia chỉ ra ba lỗi thường gặp của tài xế mới khi vượt xe. Đầu tiên là việc vượt xe trong điều kiện tầm nhìn hạn chế, thứ hai là tốc độ quá chậm khi thực hiện hành động này, và cuối cùng là không sử dụng đèn cảnh báo. Những lỗi này có thể dẫn đến nguy hiểm cho cả tài xế và các phương tiện khác trên đường.",
     "link": "https://vnexpress.net/ba-loi-thuong-gap-khi-vuot-xe-cua-tai-xe-moi-4865654.html",
@@ -3798,33 +3852,6 @@
       },
       {
         "text": "Không giảm tốc độ, không quan sát, không sử dụng gương chiếu hậu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "MV \"Đầu tư cho trái tim\" - Khi âm nhạc đồng điệu với nhịp đập trái tim",
-    "content": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD mang đến thông điệp ý nghĩa về việc chăm sóc sức khỏe trái tim, điều cần thiết để xây dựng một tương lai vững bền bên người thân yêu. Bằng giai điệu Pop, R&B bắt tai, bài hát thể hiện tình yêu và sự tận tụy của chàng trai dành cho người mình yêu, khẳng định rằng tình yêu cần được nuôi dưỡng mỗi ngày. MV không chỉ gợi nhớ về tình yêu lãng mạn mà còn kêu gọi mọi người hãy đầu tư cho sức khỏe tim mạch của chính mình và người thương.",
-    "link": "https://dantri.com.vn/giai-tri/mv-dau-tu-cho-trai-tim-khi-am-nhac-dong-dieu-voi-nhip-dap-trai-tim-20250326224106623.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "MV \"Đầu tư cho trái tim\" của Quang Hùng MasterD truyền tải thông điệp gì?",
-    "answers": [
-      {
-        "text": "Chăm sóc sức khỏe trái tim là quan trọng.",
-        "correct": true
-      },
-      {
-        "text": "Tình yêu không cần nuôi dưỡng.",
-        "correct": false
-      },
-      {
-        "text": "Cuộc sống không cần phải vững bền.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có tình yêu mới là đủ.",
         "correct": false
       }
     ]
@@ -4035,33 +4062,6 @@
     ]
   },
   {
-    "title": "Các dấu hiệu thính giác bị ảnh hưởng",
-    "content": "Bài viết đề cập đến các dấu hiệu cho thấy thính giác bị ảnh hưởng, bao gồm khó khăn trong việc nghe rõ lời nói, dễ giật mình trước âm thanh lớn và khó tập trung trong không gian ồn ào. Tuổi tác và các yếu tố môi trường như tiếng ồn lớn và hóa chất có thể gây tổn hại cho tế bào lông trong tai, dẫn đến mất thính lực. Các bác sĩ khuyến cáo rằng nếu gặp phải những dấu hiệu này, người đọc nên xem xét việc khám thính lực và sử dụng máy trợ thính nếu cần.",
-    "link": "https://vnexpress.net/cac-dau-hieu-thinh-giac-bi-anh-huong-4853180.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Các dấu hiệu nào cho thấy thính giác bị ảnh hưởng?",
-    "answers": [
-      {
-        "text": "Khó nghe rõ lời nói và dễ giật mình trước âm thanh lớn",
-        "correct": true
-      },
-      {
-        "text": "Chỉ nghe được âm thanh tần số thấp",
-        "correct": false
-      },
-      {
-        "text": "Không thấy được âm thanh trong môi trường yên tĩnh",
-        "correct": false
-      },
-      {
-        "text": "Luôn cảm thấy thính giác tốt hơn trước đây",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé gái mắc hội chứng Cushing do thuốc corticoid chữa dị ứng",
     "content": "Bé Chi, 5 tuổi, đã mắc hội chứng Cushing do lạm dụng thuốc corticoid để chữa dị ứng. Sau khi dùng thuốc trong thời gian dài, bé xuất hiện các triệu chứng như sưng phù mặt, bụng, teo cơ tay chân và rạn da. Các bác sĩ cho biết việc sử dụng corticoid kéo dài có thể gây ra nhiều tác dụng phụ nghiêm trọng, bao gồm suy thượng thận. Hiện bé đã được điều trị bằng cách giảm liều lượng corticoid và sẽ ngưng hoàn toàn thuốc theo liệu trình.",
     "link": "https://vnexpress.net/be-gai-mac-hoi-chung-cushing-do-thuoc-corticoid-chua-di-ung-4866312.html",
@@ -4084,6 +4084,33 @@
       },
       {
         "text": "Do thiếu vitamin D",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Các dấu hiệu thính giác bị ảnh hưởng",
+    "content": "Bài viết đề cập đến các dấu hiệu cho thấy thính giác bị ảnh hưởng, bao gồm khó khăn trong việc nghe rõ lời nói, dễ giật mình trước âm thanh lớn và khó tập trung trong không gian ồn ào. Tuổi tác và các yếu tố môi trường như tiếng ồn lớn và hóa chất có thể gây tổn hại cho tế bào lông trong tai, dẫn đến mất thính lực. Các bác sĩ khuyến cáo rằng nếu gặp phải những dấu hiệu này, người đọc nên xem xét việc khám thính lực và sử dụng máy trợ thính nếu cần.",
+    "link": "https://vnexpress.net/cac-dau-hieu-thinh-giac-bi-anh-huong-4853180.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Các dấu hiệu nào cho thấy thính giác bị ảnh hưởng?",
+    "answers": [
+      {
+        "text": "Khó nghe rõ lời nói và dễ giật mình trước âm thanh lớn",
+        "correct": true
+      },
+      {
+        "text": "Chỉ nghe được âm thanh tần số thấp",
+        "correct": false
+      },
+      {
+        "text": "Không thấy được âm thanh trong môi trường yên tĩnh",
+        "correct": false
+      },
+      {
+        "text": "Luôn cảm thấy thính giác tốt hơn trước đây",
         "correct": false
       }
     ]
